# CASMcode_bset

./: CHANGELOG.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  test-linux.yml  test-macos.yml  test-python-versions.yml
casm/bset/: __main__.py  _methods.py
casm/bset/clexwriter/: _methods.py
casm/bset/cluster_functions/: _cluster_functions.py
doc/: conf.py
tests/: test_occ_dof.py
